force-app/main/default/objects/ssot__HealthcarePerformer__dlm/fields/ssot__rel_1716725815912_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725815912_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthcarePerformer_SourceServiceRef_rel</label>
    <referenceTo>ssot__PatientRegisteredDevice__dlm</referenceTo>
    <relationshipLabel>HealthcarePerformer_SourceServiceRef_rel</relationshipLabel>
    <relationshipName>rel_1716725815912_end</relationshipName>
    <type>Lookup</type>
</CustomField>