force-app/main/default/objects/ssot__HealthcarePerformer__dlm/fields/ssot__rel_1716725816908_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725816908_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthcarePerformer_RoleId_map_CodeS_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>HealthcarePerformer_RoleId_map_CodeS_rel</relationshipLabel>
    <relationshipName>rel_1716725816908_end</relationshipName>
    <type>Lookup</type>
</CustomField>