force-app/main/default/objects/ssot__HealthcarePerformer__dlm/fields/ssot__RoleId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RoleId__c</fullName>
    <label>Role</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RoleId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>