force-app/main/default/objects/ssot__HealthcarePerformer__dlm/fields/ssot__SourceServiceReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceServiceReferenceId__c</fullName>
    <label>Source Service Reference</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceServiceReferenceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>