force-app/main/default/objects/ssot__HealthcarePerformer__dlm/fields/ssot__SourceServiceReferenceObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceServiceReferenceObject__c</fullName>
    <label>Source Service Reference Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceServiceReferenceObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>